# automation

./: Cargo.toml  linux_deps.sh
src/: lib.rs  main.rs  models.rs
src/actions/: executor.rs  mod.rs  verifier.rs
src/actuators/: keyboard.rs  mouse.rs
src/api/: mod.rs
src/models/: action_result.rs  task_state.rs
src/senses/: mod.rs  screens.rs  sense.rs  time.rs
src/state/: mod.rs
src/ui/: mod.rs
src/utils/: mod.rs
