[package]
name = "automation"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai = "0.28.0"
base64 = "0.22.1"
chrono = "0.4.40"
dotenvy = "0.15.7"
enigo = "0.3.0"
fs_extra = "1.3.0"
image = "0.25.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.44.2", features = ["full"] }
xcap = "0.4.1"
